--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,36 @@
+body {
+  font-family: 'Permanent Marker'; }
+
 header {
+  -webkit-box-shadow: inset 0px 0px 20px 1px purple;
+  box-shadow: inset 0px 0px 20px 1px purple;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
   width: 110%;
   height: 100px;
   background-color: #ccade9;
   margin: -10px 0 0 -10px; }
+  header p {
+    text-shadow: 0px 0px 10px black;
+    font-size: 50px;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center;
+    margin: 0 0 10px 0; }
+  header ul {
+    position: relative;
+    left: 26px;
+    -ms-flex-item-align: center;
+    align-self: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    list-style: none; }
+    header ul li {
+      font-size: 21px;
+      margin-left: 30px; }
 
 /*# sourceMappingURL=style.css.map */
