--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,30 @@
+body {
+    font-family: 'Permanent Marker';
+}
+
 header {
+    box-shadow: inset 0px 0px 20px 1px purple;
+    display: flex;
+    justify-content: space-around;
     width: 110%;
     height: 100px;
     background-color: rgb(204, 173, 233);
     margin: -10px 0 0 -10px;
+    p {
+        text-shadow: 0px 0px 10px black;
+        font-size: 50px;
+        align-self: center;
+        margin: 0 0 10px 0;
+    }
+    ul {
+        position: relative;
+        left: 26px;
+        align-self: center;
+        display: flex;
+        list-style: none;
+        li {
+            font-size: 21px;
+            margin-left: 30px;
+        }
+    }
 }
